--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="portfolio-item">
                     <h3>Colour Changing</h3>
-                    <p>A description of the project goes here. It includes the tools and technologies used.</p>
-                    <a href="#">View Project</a>
+                    <p>Developed a "Colour Changing" game using javascript , html , css.</p>
+                    <a href=" https://bhumika-bhoi.github.io/color-changing-/">View Project</a>
                 </div>
             </div>
         </div>
