--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio-section">
         <div class="container-1">
-            <h2>Portfolio</h2>
+            <h2>Projects</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <h3>Food Ordering Page</h3>
